[metadata]
name = popoto-tomcounsell
version = 0.0.1
author = Tom Counsell
author_email = _
description = A Python Redis ORM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomcounsell/popoto
project_urls =
    Bug Tracker = https://github.com/tomcounsell/popoto/issues
classifiers =
    Programming Language :: Python :: 3.8+
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
