[metadata]
name = popoto
version = 0.3.0
author = Tom Counsell
author_email = other@tomcounsell.com
description = A Python Redis ORM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomcounsell/popoto
project_urls =
    Bug Tracker = https://github.com/tomcounsell/popoto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
