[metadata]
name = popoto
version = 0.8.3
author = Tom Counsell
author_email = other@tomcounsell.com
description = A Python Redis ORM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomcounsell/popoto
project_urls =
    Bug Tracker = https://github.com/tomcounsell/popoto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
extend-ignore = E203

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
